MARP-2515 Data table issues